--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -29,7 +29,7 @@ body.cms {
 
 .cms {
 	a {
-		color: $color-text-dark-link;
+		color: $color-text-blue-link;
 		text-decoration: none;
 	
 		&:hover,
